@@ -18,6 +18,7 @@ next:
             - host status beats service status for group/filter icons
           - Config Tool:
             - support recursive object removal
+            - empty files will be deleted when the last object is removed
 
 2.08     Fri May  6 11:29:14 CEST 2016
           - add status column to performance map excel export
